--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Build-Depends: debhelper (>= 10),
  cmake,
  python3,
  glslang-tools,
- vulkan-headers,
- libvulkan1,
+ vulkan-headers (>= 1.2.141.0),
+ libvulkan1 (>= 1.2.141.0),
  libwayland-dev,
  libx11-dev,
  libxrandr-dev,
@@ -19,7 +19,7 @@ Vcs-Browser: https://github.com/KhronosGroup/Vulkan-Tools
 
 Package: vulkan-tools
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, libvulkan1 (>= 1.2.141.0)
 Description: This project provides Vulkan tools and utilities that can
  assist development by enabling developers to verify their
  applications correct use of the Vulkan API.
