control: grammer for description

--- a/debian/control
+++ b/debian/control
@@ -22,4 +22,4 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libvulkan1 (>= 1.2.148.0)
 Description: This project provides Vulkan tools and utilities that can
  assist development by enabling developers to verify their
- applications correct use of the Vulkan API.
+ applications' correct use of the Vulkan API.
