control: update to use libvulkan-dev as build dep

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 10),
  python3,
  glslang-tools,
  vulkan-headers (>= 1.2.148.0),
- libvulkan1 (>= 1.2.148.0),
+ libvulkan-dev (>= 1.2.148.0),
  libwayland-dev,
  libx11-dev,
  libxrandr-dev,
