--- a/debian/control
+++ b/debian/control
@@ -21,8 +21,9 @@ Vcs-Browser: https://github.com/KhronosGroup/Vulkan-Tools
 Package: vulkan-tools
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libvulkan1 (>= 1.3.231.0~rc1)
-Breaks: vulkan-utils
-Replaces: vulkan-utils
+Breaks: vulkan-utils (<< 1.1.82.0+dfsg1-1)
+Replaces: vulkan-utils (<< 1.1.82.0+dfsg1-1)
 Provides: vulkan-utils
 Description: This project provides Vulkan tools and utilities that can
  assist Vulkan developers
+
