--- a/debian/control
+++ b/debian/control
@@ -5,14 +5,14 @@ Maintainer: John Zupin <johnz@lunarg.com>
 Build-Depends: debhelper (>= 10),
  cmake,
  python3,
- glslang-tools,
  vulkan-headers (>= 1.3.231.0~rc1),
  libvulkan-dev (>= 1.3.231.0~rc1),
  libwayland-dev,
  libx11-dev,
  libxrandr-dev,
  pkg-config,
- wayland-protocols
+ wayland-protocols,
+ volk
 Standards-Version: 4.1.2
 Homepage: https://github.com/KhronosGroup/Vulkan-Tools
 Vcs-Git: https://github.com/KhronosGroup/Vulkan-Tools
